manifests/demo-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: grocery-shop-service
  labels:
    env: demo
    project: grocery-shop
    app: grocery-shop-service
    tier: backend

spec:
  replicas: 1
  progressDeadlineSeconds: 60
  selector:
    matchLabels:
      project: grocery-shop
      app: grocery-shop-service
      tier: backend

  template:
    metadata:
      labels:
        project: grocery-shop
        app: grocery-shop-service
        tier: backend
    spec:
      containers:
      - name: tomcat-demo
        image: mddinternship2021h2project.azurecr.io/grocery-shop-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: grocery-shop-service-service
  labels:
    env: demo
spec:
  selector:
    project: grocery-shop
    tier: backend
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-shop-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  # - host: www..com
  - http:
      paths:
      - path: /grocery-list-demo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grocery-shop-service-service
            port:
              number: 8080
