manifests/dev-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: grocery-shop-service-deployment-dev
  labels:
    env: dev
    app: grocery-shop-service

spec:
  replicas: 1
  selector:
    matchLabels:
      project: grocery-shop-service-dev

  template:
    metadata:
      labels:
        project: grocery-shop-service-dev
    spec:
      containers:
      - name: grocery-shop-service-dev-pod
        image: mddinternship2021h2project.azurecr.io/grocery-shop-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        # resources:
          # requests:
            # cpu: 1.0
            # memory: 2Gi
          # limits:
            # cpu: 2.0
            # memory: 4Gi

---
apiVersion: v1
kind: Service
metadata:
  name: grocery-shop-service-service-dev
  labels:
    env: dev
spec:
  selector:
    project: grocery-shop-service-dev
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-shop-service-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  # - host: www..com
  - http:
      paths:
      - path: /grocery-list-dev(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grocery-shop-service-service-dev
            port:
              number: 8080
